--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "xyz"
+name = "markdown-text-tool"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-xyz = "xyz:main"
+markdown-text-tool = "markdown_text_tool:main"
 
 [build-system]
 requires = ["hatchling"]
